add_subdirectory(core)

if(COCOS_PLATFORM_WIN32)
	add_subdirectory(gfx-gl)
	add_subdirectory(gfx-gles2)
	add_subdirectory(gfx-gles3)
elseif(COCOS_PLATFORM_IOS)
	add_subdirectory(gfx-gles2)
	add_subdirectory(gfx-gles3)
	add_subdirectory(gfx-metal)
elseif(COCOS_PLATFORM_OSX)
	add_subdirectory(gfx-metal)
elseif(COCOS_PLATFORM_ANDROID)
    add_subdirectory(gfx-gles2)
    add_subdirectory(gfx-gles3)
endif()
